--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -1,9 +1,9 @@
 html {
     font-family: 'Fira Sans', sans-serif;
-    background-color: #F0ECEE
+    background-color: #F0ECEE;
 }
 
 .nav {
-
+color: #88898B;
 }
 
