--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -1,7 +1,7 @@
 html {
     font-family: 'Fira Sans', sans-serif;
     background-color: #F0ECEE;
-    background-image: url(bulldog.jpg); 
+    background-image: bulldogs.jpg; 
 }
 
 div {
