typo fixed in title and button hover color

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -41,6 +41,10 @@ a:hover {
     cursor: pointer;
 }
 
+.button:hover {
+    background-color: #CCC;
+}
+
 @media screen and (min-width: 768px) {
     .nav {
         flex-direction: column;
