--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 div {
-    display: flexbox;
+    display: flex;
     flex-flow: row wrap;  
 }
 
@@ -39,6 +39,7 @@ a:hover {
     padding: 10px;
     border-radius: 15px;
     cursor: pointer;
+    border: none;
 }
 
 .button:hover {
