li added inline display

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -24,6 +24,10 @@ justify-content: flex-end;
     color: #FF4850;
 }
 
+li {
+    display: inline;
+}
+
 a {
     text-decoration: none;
     color: #88898B;
