--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -18,7 +18,7 @@ div {
 .nav {
 color: #88898B;
 display: flex;
-flex-flow: row nowrap;
+flex-flow: row-reverse nowrap;
 justify-content: flex-end;
 }
 
