--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -19,7 +19,7 @@ div {
 color: #88898B;
 display: flex;
 flex-flow: row-reverse nowrap;
-justify-content: flex-end;
+justify-content: space-between;
 }
 
 .nav:hover {
