ul class added float right added to nav a

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -18,12 +18,20 @@ div {
 .nav {
 color: #88898B;
 display: flex;
-flex-flow: row-reverse nowrap;
+flex-flow: row nowrap;
 justify-content: space-between;
+}
+
+.nav a {
+    float: right;
 }
 
 .nav:hover {
     color: #FF4850;
+}
+
+#ul {
+    
 }
 
 li {
