--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -1,10 +1,14 @@
 html {
     font-family: 'Fira Sans', sans-serif;
     background-color: #F0ECEE;
-    background-image: url("images/bulldog.jpg"); 
+    background-image: url("images/bulldog.jpg") no-repeat 0 0;
+    height: 100%;
 }
 
 div {
+}
+body {
+   min-height: 100%;
 }
 
 .header {
