--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -6,6 +6,8 @@ html {
 }
 
 div {
+    display: flex;
+    border: black;
 }
 body {
    min-height: 100%;
@@ -94,5 +96,9 @@ h2 {
 @media screen and (min-width: 768px) {
     .nav {
         flex-direction: column;
+    }
+
+    .button {
+        width: 100%;
     }
 }
