background pathway change

--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -1,7 +1,7 @@
 html {
     font-family: 'Fira Sans', sans-serif;
     background-color: #F0ECEE;
-    background: url("Images/bulldog.jpg") no-repeat 0 0;
+    background: url("/Hobdy-part-one/Images/bulldog.jpg") no-repeat 0 0;
     height: 100%;
 }
 
