--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -2,7 +2,7 @@ html {
     font-family: 'Fira Sans', sans-serif;
     background-color: #F0ECEE;
     background-image: url("./Images/bulldog.jpg") repeat 0 0;
-    background-size: contain;
+    background-size: 200px 200px;
     height: 100%;
 }
 
