--- a/Hobdy-part-one/style.css
+++ b/Hobdy-part-one/style.css
@@ -82,7 +82,6 @@ a:hover {
     display: flex;
     flex-flow: column wrap-reverse;
     justify-content: flex-start;
-    align-content: flex-start;
 }
 
 h1 {
@@ -97,10 +96,13 @@ h2 {
 
  @media screen and (min-width: 768p) {
     html {
-        background-image: none;
         background-color: #F0ECEE; 
     }
     .nav {
         flex-flow: column wrap;
+    }
+
+    h2 img {
+        
     }
  }
